--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@tailwindcss/vite": "^4.1.6",
     "gh-pages": "^6.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
